<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_welcome_description"
        android:textSize="18sp"
        android:textColor="@color/textSecondary"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_problem"
        android:textSize="16sp"
        android:textColor="@color/textSecondary"
        android:gravity="center" />

</LinearLayout>
